[gd_scene load_steps=3 format=3 uid="uid://ctrd2c74fom4t"]

[ext_resource type="Script" path="res://src/common/debug/debug_panel.gd" id="1_ihtat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvt4n"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="DebugPanel" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_kvt4n")
script = ExtResource("1_ihtat")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ShowFrogDebug" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Frog Debug"

[node name="GiveEnergy" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Give Energy"

[node name="TriggerBird" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Trigger Bird"

[node name="MusicTensionToggle" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Swap Music"

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"

[node name="DepleteEnergyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Deplete Energy"

[node name="DeathByBirdButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Die By Bird"

[node name="NextLevel" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Next Level"

[node name="WinGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Win Game"

[node name="Debuffs&Combos" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Debuffs & Combos"

[node name="Debuffs" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="TriggerDebuff" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Trigger Debuff"

[node name="Combos" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="TriggerCombo" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Trigger Combo"

[connection signal="pressed" from="VBoxContainer/ShowFrogDebug" to="." method="_on_show_frog_debug_pressed"]
[connection signal="pressed" from="VBoxContainer/GiveEnergy" to="." method="_on_give_energy_pressed"]
[connection signal="pressed" from="VBoxContainer/TriggerBird" to="." method="_on_trigger_bird_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicTensionToggle" to="." method="_on_music_tension_toggle_pressed"]
[connection signal="pressed" from="VBoxContainer/DepleteEnergyButton" to="." method="_on_deplete_energy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DeathByBirdButton" to="." method="_on_death_by_bird_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="VBoxContainer/WinGame" to="." method="_on_win_game_pressed"]
[connection signal="pressed" from="VBoxContainer/TriggerDebuff" to="." method="_on_trigger_debuff_pressed"]
[connection signal="pressed" from="VBoxContainer/TriggerCombo" to="." method="_on_trigger_combo_pressed"]
